--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <p>Blablabla</p>
     <p>Ez egy jó szöveg</p>
     <p>Ez rossz szöveg</p>
+    <p>Blablabla</p>
+    <p>Ez egy jó szöveg</p>
+    <p>Ez rossz szöveg</p>
 </body>
 </html>
